[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/data/Data.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/datalink/DataLink.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/data-line.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=1]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array(  )
}

[node name="Link" type="Line2D"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
z_as_relative = false
width = 5.5
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 3 )
texture_mode = 1
joint_mode = 2
antialiased = true
script = ExtResource( 2 )

[node name="DataPath" type="Path2D" parent="."]
self_modulate = Color( 1, 1, 1, 1 )
curve = SubResource( 1 )

[node name="DataFollow" type="PathFollow2D" parent="DataPath"]

[node name="Data" parent="DataPath/DataFollow" instance=ExtResource( 1 )]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="DataFollow2" type="PathFollow2D" parent="DataPath"]

[node name="Data" parent="DataPath/DataFollow2" instance=ExtResource( 1 )]

[node name="DataTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="Tween" type="Tween" parent="."]
